--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salesforces UI/UX</title>
+    <title>Salesforces CLONE UI/UX</title>
 <link rel="stylesheet" href="1.css">
 <link rel="shortcut icon" href="https://a.sfdcstatic.com/shared/images/c360-nav/salesforce-with-type-logo.svg" type="image/x-icon">
 
