--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <P id="contact">Contact Us</P>
                 <br>
                 <p id="us">
-                    <a href="tel:+916367452590">+916367452590</a>
+                    <a href="tel:+916367452534">XXX-XXX-XXX</a>
                 </p>
             </div>
             
