--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div id="content">
                 <div id="content1">
-                    <p id="p1">Try Salesforce Starter <br>Suite for free</p>
+                    <p id="p1">Try Salesforce <b>Clone</b> Starter <br>Suite for free</p>
                     <p id="p2">Unite marketing, sales, and service in a single app. Try Salesforce Starter Suite today. There's nothing to install. No credit card required.</p>
                     
                     <div id="btns">
@@ -81,7 +81,7 @@
 
             </div>
             <div id="heading">
-                <p style="font-size: 2.5em; margin-top: -50px;"><b>Learn what Salesforce products can do for</b></p>  
+                <p style="font-size: 2.5em; margin-top: -50px;"><b>Learn what Salesforce <b>Clone</b> products can do for</b></p>  
                 <p style="font-size: 2.5em;"><b>you.</b></p>  
             </div>
         
