--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Navbar -->
+    <!-- Navbar with New Options -->
     <nav class="navbar">
         <div class="logo">
             <span>Varun Rawat</span>
@@ -32,6 +32,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#blog">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="menu-toggle">
@@ -49,9 +51,9 @@
             <h1 class="animate-text">I’m Varun Rawat</h1>
             <p class="animate-text">Aspiring Developer & First-Year Student</p>
             <div class="social-links animate-text">
-                <a href="#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/techvoyager-varun" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/varun-rawat072/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://x.com/VarunR25117" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
             <a href="#contact" class="btn primary-btn animate-text">Let’s Connect</a>
         </div>
@@ -82,15 +84,41 @@
         <h2 class="section-title">My Work</h2>
         <div class="projects-container">
             <div class="project-card tilt" data-tilt>
-                <h3>Project One</h3>
+                <h3>Shell Automation</h3>
                 <p>A simple shell script automation tool to streamline repetitive tasks.</p>
                 <a href="#" class="btn secondary-btn">View Project</a>
             </div>
             <div class="project-card tilt" data-tilt>
-                <h3>Project Two</h3>
+                <h3>Portfolio Website</h3>
                 <p>A personal portfolio website built with HTML, CSS, and JavaScript.</p>
                 <a href="#" class="btn secondary-btn">View Project</a>
             </div>
+        </div>
+    </section>
+
+    <!-- Resume Section (New) -->
+    <section id="resume" class="section">
+        <h2 class="section-title">Resume</h2>
+        <div class="resume-content">
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>Education</h3>
+                    <p>First-Year B.Tech Student at LNMIIT (2024 - Present)</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Skills</h3>
+                    <p>Shell Scripting, C, HTML, CSS, JavaScript</p>
+                </div>
+            </div>
+            <a href="path/to/your/resume.pdf" download class="btn primary-btn">Download Resume</a>
+        </div>
+    </section>
+
+    <!-- Blog Section (New) -->
+    <section id="blog" class="section parallax-section">
+        <h2 class="section-title">Blog</h2>
+        <div class="blog-content">
+            <p>Coming soon! Stay tuned for insights on tech, coding, and my journey.</p>
         </div>
     </section>
 
@@ -109,9 +137,9 @@
     <footer>
         <p>© 2025 Varun Rawat. Designed with Passion & Precision.</p>
         <div class="social-links">
-            <a href="#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/techvoyager-varun" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/varun-rawat072/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/VarunR25117" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
 
