--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Shell Scripting, C, HTML, CSS, JavaScript</p>
                 </div>
             </div>
-            <a href="C:\Users\Lenovo\Desktop\Resume.pdf" download class="btn primary-btn">Download Resume</a>
+            <a href="Resume.pdf" download class="btn primary-btn">Download Resume</a>
         </div>
     </section>
 
