--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                     <p>Shell Scripting, C, HTML, CSS, JavaScript</p>
                 </div>
             </div>
-            <a href="Resume.pdf" download class="btn primary-btn">Download Resume</a>
+            <a href="Resume.pdf" target="_blank" download class="btn primary-btn">Download Resume</a>
+
         </div>
     </section>
 
