--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="about" class="section parallax-section">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
-            <p>I’m Varun Rawat, a first-year student at LNMIIT (LNM Institute of Information Technology). I’m passionate about coding and technology, with a growing expertise in shell scripting, C, HTML, CSS, and JavaScript. I’m excited to explore and build innovative projects as I embark on my journey in the tech world.</p>
+            <p>I’m Varun Rawat, a first-year student at LNMIIT (LNM Institute of Information Technology). I’m passionate about coding and technology, with a growing expertise in shell scripting, C, HTML, CSS, and JavaScript, React, Nodejs. I’m excited to explore and build innovative projects as I embark on my journey in the tech world.</p>
         </div>
     </section>
 
@@ -107,7 +107,7 @@
                 </div>
                 <div class="timeline-item">
                     <h3>Skills</h3>
-                    <p>Shell Scripting, C, HTML, CSS, JavaScript</p>
+                    <p>Shell Scripting, C, HTML, CSS, JavaScript, React, Nodsjs</p>
                 </div>
             </div>
            <a href="Resume.pdf" target="_blank" class="btn primary-btn">View Resume</a>
