--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <div class="skill-card" data-skill="html">HTML</div>
             <div class="skill-card" data-skill="css">CSS</div>
             <div class="skill-card" data-skill="js">JavaScript</div>
+            <div class="skill-card" data-skill="react">React</div>
+            <div class="skill-card" data-skill="node">Nodejs</div>
         </div>
     </section>
 
@@ -107,7 +109,7 @@
                 </div>
                 <div class="timeline-item">
                     <h3>Skills</h3>
-                    <p>Shell Scripting, C, HTML, CSS, JavaScript, React, Nodsjs</p>
+                    <p>Shell Scripting, C, HTML, CSS, JavaScript, React, Nodejs</p>
                 </div>
             </div>
            <a href="Resume.pdf" target="_blank" class="btn primary-btn">View Resume</a>
