--- a/index.html
+++ b/index.html
@@ -86,14 +86,9 @@
         <h2 class="section-title">My Work</h2>
         <div class="projects-container">
             <div class="project-card tilt" data-tilt>
-                <h3>Shell Automation</h3>
-                <p>A simple shell script automation tool to streamline repetitive tasks.</p>
-                <a href="#" class="btn secondary-btn">View Project</a>
-            </div>
-            <div class="project-card tilt" data-tilt>
                 <h3>Portfolio Website</h3>
                 <p>A personal portfolio website built with HTML, CSS, and JavaScript.</p>
-                <a href="#" class="btn secondary-btn">View Project</a>
+                <a href="https://www.techvoyager.tech/" class="btn secondary-btn">View Project</a>
             </div>
         </div>
     </section>
