--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="notion.css">
     <link rel="stylesheet" href="queries.css">
+    <link rel="shortcut icon" href="Notion-Logo.png" type="image/x-icon">
     <title>Varun Project</title>
 </head>
 
