--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <title>Tic Tac Toe</title>
   <link href="output.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500;700&family=Pacifico&display=swap" rel="stylesheet">
-
+  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/1021/1021366.png" type="image/x-icon">
   <style>
     body {
       font-family: sans-serif;
+      margin: 0;
+      background: #0a0a1a;
+      overflow: hidden;
     }
-
     h1 {
       font-family: 'Pacifico', cursive;
     }
-
     @keyframes colorBlink {
       0%, 100% {
         color: #5ca196;
@@ -24,52 +25,84 @@
         color: #fbbf24;
       }
     }
-
     .text-blink {
       animation: colorBlink 3s infinite;
     }
+    .circuit-bg {
+      position: relative;
+      min-height: 100vh;
+    }
+    .circuit-bg::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(10, 10, 30, 0.6), rgba(20, 20, 40, 0.4));
+      z-index: 0;
+    }
+    .circuit-layer {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><path d="M10 50 L40 50 M60 50 L90 50 M50 10 L50 40 M50 60 L50 90 M20 20 L40 40 M60 60 L80 40 M30 70 L50 90 M70 30 L90 50" stroke="rgba(255,165,0,0.5)" stroke-width="2" fill="none"/><path d="M15 45 L35 45 M65 45 L85 45 M45 15 L45 35 M45 65 L45 85 M25 25 L45 45 M65 25 L85 45 M25 65 L45 85 M65 65 L85 85" stroke="rgba(255,215,0,0.4)" stroke-width="1.5" fill="none"/></svg>') repeat;
+      background-size: 200px 200px;
+      animation: circuit-pulse 10s ease-in-out infinite;
+      z-index: 0;
+    }
+    .circuit-layer-2 {
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><path d="M10 50 L30 30 L50 50 L70 30 L90 50 M50 10 L50 30 M50 70 L50 90 M20 20 L40 40 M60 60 L80 80" stroke="rgba(0,150,255,0.3)" stroke-width="2" fill="none"/><path d="M15 55 L35 35 L55 55 L75 35 L85 55 M55 15 L55 35 M55 65 L55 85 M25 25 L45 45 M65 65 L85 85" stroke="rgba(255,255,255,0.2)" stroke-width="1" fill="none"/></svg>') repeat;
+      background-size: 250px 250px;
+      animation: circuit-pulse 14s ease-in-out infinite reverse;
+      opacity: 0.7;
+    }
+    @keyframes circuit-pulse {
+      0% { transform: scale(1); opacity: 0.6; }
+      50% { transform: scale(1.05); opacity: 0.9; }
+      100% { transform: scale(1); opacity: 0.6; }
+    }
+    .content {
+      position: relative;
+      z-index: 1;
+    }
   </style>
 </head>
-<body id="bodyy" class="h-screen bg-gradient-to-br from-[#0f2027] via-[#203a43] to-[#2c5364]">
-
-  <h1 class="text-5xl font-bold text-center pt-10 text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-emerald-400 to-green-400 animate-pulse drop-shadow-xl text-blink">
-    Tic Tac Toe
-  </h1>
-
-  <div class="grid grid-cols-3 gap-2 aspect-square max-w-80 m-auto mt-12">
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
-    <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+<body id="bodyy" class="h-screen circuit-bg">
+  <div class="circuit-layer"></div>
+  <div class="circuit-layer-2"></div>
+  <div class="content">
+    <h1 class="text-5xl font-bold text-center pt-10 text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-emerald-400 to-green-400 animate-pulse drop-shadow-xl text-blink">
+      Tic Tac Toe
+    </h1>
+    <div class="grid grid-cols-3 gap-2 aspect-square max-w-80 m-auto mt-12">
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+      <div class="box bg-white text-black text-4xl font-bold flex items-center justify-center cursor-pointer hover:bg-gray-200 rounded-lg aspect-square w-full h-full"></div>
+    </div>
+    <div class="flex flex-row max-w-80 m-auto">
+      <button id="choose1" type="reset" class="bg-gradient-to-r from-blue-300 to-cyan-500 text-lg text-white m-auto mt-6 flex px-6 py-2 rounded-full shadow-lg hover:from-cyan-600 hover:to-teal-600 transition duration-300 font-semibold">
+        Select X
+      </button>
+      <button id="choose2" type="reset" class="bg-gradient-to-r from-blue-300 to-cyan-500 text-lg text-white m-auto mt-6 flex px-6 py-2 rounded-full shadow-lg hover:from-cyan-600 hover:to-teal-600 transition duration-300 font-semibold">
+        Select O
+      </button>
+    </div>
+    <div id="startt" class="text-white text-xl font-semibold flex items-center justify-center cursor-default rounded-lg max-w-48 h-9 m-auto mt-8">
+      <h2 id="start">Not Started</h2>
+    </div>
+    <button id="resets" type="reset" class="bg-gradient-to-r from-teal-500 to-cyan-500 text-lg text-white m-auto mt-4 flex px-6 py-2 rounded-full shadow-lg hover:from-cyan-600 hover:to-teal-600 transition duration-300 font-semibold">
+      Restart
+    </button>
   </div>
-
-  <div class="flex flex-row max-w-80 m-auto ">
-    <button id="choose1" type="reset" class="bg-gradient-to-r from-blue-300 to-cyan-500 text-lg text-white m-auto mt-6 flex px-6 py-2 rounded-full shadow-lg hover:from-cyan-600 hover:to-teal-600 transition duration-300 font-semibold">
-    Select X
-  </button>
-
-  <button id="choose2" type="reset" class="bg-gradient-to-r from-blue-300 to-cyan-500 text-lg text-white m-auto mt-6 flex px-6 py-2 rounded-full shadow-lg hover:from-cyan-600 hover:to-teal-600 transition duration-300 font-semibold">
-    Select O
-  </button>
-  </div>
-
-  <div id="startt" class= "text-white text-xl font-semibold flex items-center justify-center 
-        cursor-default rounded-lg max-w-48 h-9 m-auto mt-8">
-        <h2 id="start">
-            Not Started
-        </h2>
-  </div>
-
-  <button id="resets" type="reset" class="bg-gradient-to-r from-teal-500 to-cyan-500 text-lg text-white m-auto mt-4 flex px-6 py-2 rounded-full shadow-lg hover:from-cyan-600 hover:to-teal-600 transition duration-300 font-semibold">
-    Restart
-  </button>
-
   <script src="script.js"></script>
-
 </body>
 </html>
